<resources>
    <string name="app_name">Appstore (elimu.ai)</string>
    <string name="checking_for_app_updates">Checking for app updates...</string>
    <string name="device_registration_failed">Device registration failed</string>
    <string name="download">Download</string>
    <string name="download_update">Download update</string>
    <string name="do_you_have_a_license_number">Do you have a license number?</string>
    <string name="email_address">E-mail addresss</string>
    <string name="install">Install</string>
    <string name="install_update">Install update</string>
    <string name="language_am">Amharic</string>
    <string name="language_ar">Arabic</string>
    <string name="language_en">English</string>
    <string name="language_hi">Hindi</string>
    <string name="language_km">Khmer</string>
    <string name="language_ml">Malayalam</string>
    <string name="language_es">Spanish</string>
    <string name="language_so">Somali</string>
    <string name="language_sw">Swahili</string>
    <string name="language_th">Thai</string>
    <string name="last_synchronization">Last synchronization: %s</string>
    <string name="license_number">License number</string>
    <string name="license_validation_failed">License validation failed</string>
    <string name="locale_selected">Locale selected</string>
    <string name="never">Never</string>
    <string name="no">No</string>
    <string name="registering_device">Registering device...</string>
    <string name="save">Save</string>
    <string name="select_locale">Select locale</string>
    <string name="select_the_students_native_language">Select the student\'s native language</string>
    <string name="server_is_not_reachable">Server is not reachable</string>
    <string name="start_synchronization">Start synchronization</string>
    <string name="synchronizing">Synchronizing</string>
    <string name="type_the_password">Type the password</string>
    <string name="validating_license">Validating license...</string>
    <string name="version">Version</string>
    <string name="wifi_needs_to_be_enabled">Wi-Fi needs to be enabled</string>
    <string name="wifi_needs_to_be_connected">Wi-Fi needs to be connected</string>
    <string name="yes">Yes</string>

    <!-- ================= APPLICATION LIST ===================== -->
    <string name="app_list_check_internet_connection">Please check your Internet connection.</string>
    <string name="app_list_download_progress_number">%1$.1f MB/%2$.1f MB\t%3$d%%</string>
    <string name="app_list_download_all">Download all</string>

    <string name="invalid_checksum">Invalid checksum</string>
</resources>
