<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center">

    <com.kofigyan.stateprogressbar.StateProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:spb_currentStateNumber="two"
        app:spb_maxStateNumber="three"
        app:spb_stateForegroundColor="@color/colorAccent"
        app:spb_animateToCurrentProgressState="true"
        app:spb_checkStateCompleted="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address" />

        <EditText android:id="@+id/editTextLicenseEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/license_number" />

        <EditText android:id="@+id/editTextLicenseNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20" />

        <Button android:id="@+id/buttonLicenseNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle"
            android:enabled="false" />
    </LinearLayout>
</RelativeLayout>
