<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TwoLineListItem
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/list_item_launch_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/listPreferredItemHeight"
        android:mode="twoLine"
        android:paddingStart="?attr/listPreferredItemPaddingStart"
        android:paddingEnd="?attr/listPreferredItemPaddingEnd">

        <TextView android:id="@+id/textViewFirstLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceListItem"
            tools:text="First line..." />

        <TextView android:id="@+id/textViewSecondLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewFirstLine"
            android:layout_alignStart="@id/textViewFirstLine"
            android:textAppearance="?attr/textAppearanceListItemSecondary"
            tools:text="Second line..." />
    </TwoLineListItem>

    <Button
        android:id="@+id/list_item_launch_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:drawableTop="@drawable/ic_baseline_launch_24"
        android:drawableTint="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/launch" />
    <Button
        android:id="@+id/list_item_install_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:drawableTop="@drawable/ic_baseline_android_24"
        android:drawableTint="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/install" />
    <Button
        android:id="@+id/list_item_download_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:drawableTop="@drawable/ic_baseline_save_alt_24"
        android:drawableTint="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/download" />
    <Button
        android:id="@+id/list_item_install_update_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:drawableTop="@drawable/ic_baseline_android_24"
        android:drawableTint="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/install_update" />
    <Button
        android:id="@+id/list_item_download_update_button"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:drawableTop="@drawable/ic_baseline_save_alt_24"
        android:drawableTint="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/download_update" />
    <ProgressBar
        android:id="@+id/list_item_download_progressbar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="?attr/listPreferredItemPaddingStart"
        android:layout_marginEnd="?attr/listPreferredItemPaddingStart" />
</androidx.constraintlayout.widget.ConstraintLayout>
